src/test/ui/traits/trait-bounds-on-structs-and-enums-xc.stderr
error[E0277]: the trait bound `usize: trait_bounds_on_structs_and_enums_xc::Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums-xc.rs:7:15
   |
LL | fn explode(x: Foo<usize>) {}
   |               ^^^^^^^^^^ the trait `trait_bounds_on_structs_and_enums_xc::Trait` is not implemented for `usize`
   | 
  ::: $DIR/auxiliary/trait_bounds_on_structs_and_enums_xc.rs:5:18
   |
LL | pub struct Foo<T:Trait> {
   |                  ----- required by this bound in `trait_bounds_on_structs_and_enums_xc::Foo`

error[E0277]: the trait bound `f32: trait_bounds_on_structs_and_enums_xc::Trait` is not satisfied
  --> $DIR/trait-bounds-on-structs-and-enums-xc.rs:10:14
   |
LL | fn kaboom(y: Bar<f32>) {}
   |              ^^^^^^^^ the trait `trait_bounds_on_structs_and_enums_xc::Trait` is not implemented for `f32`
   | 
  ::: $DIR/auxiliary/trait_bounds_on_structs_and_enums_xc.rs:9:16
   |
LL | pub enum Bar<T:Trait> {
   |                ----- required by this bound in `trait_bounds_on_structs_and_enums_xc::Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
